samples/_failures_safe/1761502929_c30e54_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f20b75ee.c: In function ‘main’:
./samples/SAFE/__tmp_f20b75ee.c:162:5: error: expected declaration or statement at end of input
  162 |     TokenStack* stack = create_stack(MAX_TOKENS);
      |     ^~~~~~~~~~
